<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能群发</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="number_hint">请选择手机号码.</string>
	<string name="content_hint">请输入短信内容.</string>
	<string name="button_select">选择</string>
	<string name="button_send">发送</string>
	<string name="TextView_help">使用说明：请将短信内容中的接收人姓名用“0828”代替，如发送“祝张三节日快乐”改为“祝0828节日快乐”.</string>
</resources>
