<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:tools="http://schemas.android.com/tools" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin" 
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:orientation="vertical" 
    tools:context="com.tank.groupsend.GroupSendActivity$PlaceholderFragment">
	<EditText 
	    android:id="@+id/number" 
	   	android:layout_width="match_parent" 
	   	android:layout_height="wrap_content" 
	    android:ems="10" 
	    android:inputType="phone" 
	    android:hint="@string/number_hint">
 		<requestFocus /> 
  	</EditText>
  <EditText 
      	android:id="@+id/content" 
      	android:layout_width="match_parent" 
      	android:layout_height="wrap_content" 
      	android:ems="10" 
      	android:hint="@string/content_hint" /> 
  <TableRow 
      	android:id="@+id/tableRow1" 
      	android:layout_width="match_parent" 
      	android:layout_height="wrap_content">
  	<Button 
      		android:id="@+id/select" 
      		android:layout_width="0dp" 
      		android:layout_height="wrap_content" 
      		android:layout_weight="1" 
      		android:text="@string/button_select" /> 
  	<Button 
      		android:id="@+id/send" 
      		android:layout_width="0dp" 
      		android:layout_height="wrap_content" 
      		android:layout_weight="1" 
      		android:text="@string/button_send" /> 
  </TableRow>
  <TextView
          android:id="@+id/help"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/TextView_help" />
  <FrameLayout 
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tank.groupsend.GroupSendActivity"
    tools:ignore="MergeRootFrame" >

      

  </FrameLayout>
  </LinearLayout>













